--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,20 +25,31 @@ akka {
     metrics.enabled = off
   }
 
-  persistence {
-    journal {
-      plugin = "akka.persistence.journal.leveldb-shared"
-      leveldb-shared.store {
-        # DO NOT USE 'native = off' IN PRODUCTION !!!
-        native = off
-        dir = "target/shared-journal"
-      }
-    }
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      local.dir = "target/snapshots"
-    }
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-    snapshot-store.local.dir = "target/snapshots"
+//  persistence {
+//    journal {
+//      plugin = "akka.persistence.journal.leveldb-shared"
+//      leveldb-shared.store {
+//        # DO NOT USE 'native = off' IN PRODUCTION !!!
+//        native = off
+//        dir = "target/shared-journal"
+//      }
+//    }
+//    snapshot-store {
+//      plugin = "akka.persistence.snapshot-store.local"
+//      local.dir = "target/snapshots"
+//    }
+//    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+//    snapshot-store.local.dir = "target/snapshots"
+//  }
+
+  persistence.journal.plugin = "akka-contrib-mongodb-persistence-journal"
+  persistence.snapshot-store.plugin = "akka-contrib-mongodb-persistence-snapshot"
+  contrib.persistence.mongodb.mongo.mongouri = "mongodb://localhost:27017/customs-shard-persistence"
+}
+
+mongo-async-driver {
+  akka {
+    loggers = [ "akka.event.slf4j.Slf4jLogger" ]
+    loglevel = DEBUG
   }
 }
